Closed
Bug 1699085
Opened 4 years ago
Closed 4 years ago
Perma js/src/util/Utility.cpp:99:10: error: no member named 'gExtraPoisoningEnabled' in namespace 'js' when Gecko 88 merges to Beta on 2021-03-22
Categories
(Core :: JavaScript: GC, defect, P1)
Core
JavaScript: GC
Tracking
()
VERIFIED
FIXED
88 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox86 | --- | unaffected |
firefox87 | --- | unaffected |
firefox88 | blocking | verified |
People
(Reporter: aryx, Assigned: jonco)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2021-03-17T11:18:47.566Z] 11:18:47 ERROR - /builds/worker/checkouts/gecko/js/src/util/Utility.cpp:99:10: error: no member named 'gExtraPoisoningEnabled' in namespace 'js'
[task 2021-03-17T11:18:47.566Z] 11:18:47 INFO - bool js::gExtraPoisoningEnabled = false;
[task 2021-03-17T11:18:47.566Z] 11:18:47 INFO - ~~~~^
Flags: needinfo?(jcoppeard)
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
Assignee | ||
Comment 1•4 years ago
|
||
Assignee | ||
Updated•4 years ago
|
Severity: -- → N/A
Priority: -- → P1
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/927aa3c1972c
Don't define gExtraPoisoningEnabled in builds where JS_GC_ALLOW_EXTRA_POISONING is not defined r=sfink
Comment 3•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
![]() |
Reporter | |
Comment 4•4 years ago
|
||
Verified fixed with today's central-as-beta simulation.
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•