Bug 1699085 - Don't define gExtraPoisoningEnabled in builds where JS_GC_ALLOW_EXTRA_POISONING is not defined r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D108766